# MSBasicClone

./: .clangd  .copilot-commit-message-instructions.md  .gitignore  Basic.code-workspace  CMakeLists.txt  COMMENTING__GUIDELINES_8md.html  Doxyfile  IMPLEMENTATION__SUMMARY_8md.html  MERGE_STATUS.md  README.md  README_8md.html  annotated.html  annotated_dup.js  architecture_8md.html  ci-watcher.instructions.md  classAppendFileStmt-members.html  classAppendFileStmt.html  classAppendFileStmt.js  classArrayAccessExpr-members.html  classArrayAccessExpr.html  classArrayAccessExpr.js  classArrayLetStmt-members.html  classArrayLetStmt.html  classArrayLetStmt.js  classBinaryExpr-members.html  classBinaryExpr.html  classBinaryExpr.js  classBloadFileStmt-members.html  classBloadFileStmt.html  classBloadFileStmt.js  classBrunFileStmt-members.html  classBrunFileStmt.html  classBrunFileStmt.js  classBsaveFileStmt-members.html  classBsaveFileStmt.html  classBsaveFileStmt.js  classCallStmt-members.html  classCallStmt.html  classCallStmt.js  classCatStmt-members.html  (+479 more)
.github/: copilot-instructions.md
.github/workflows/: build.yml
.trunk/: trunk.yaml
Research/: Microsoft_BASIC_Versions_Documentation.md  MinerU_markdown_2eprodos_20251218152154_2001553491818418176.md  MinerU_markdown_Apple-II-Applesoft-BASIC-Programmer-s-Reference-Manual-Volume-1_20251218102103_2001477770001461248.md  MinerU_markdown_Apple-II-Applesoft-BASIC-Programmer-s-Reference-Manual-Volume-2_20251218104814_2001484613692112896.md  MinerU_markdown_Apple_II_BASIC_Programming_With_ProDOS_20251220032439_2002097747758907392.md  MinerU_markdown_applesoft_20251218093719_2001466774356701184.md  MinerU_markdown_prodos_20251218150014_2001548034424934400.md  applesoft_basic_commands.md  applesoft_basic_functions.md  applesoft_basic_language_features.md  applesoft_error_messages.md  applesoft_feature_reference.md  applesoft_peek_poke_call_addresses.md
assets/fonts/: README.md  apple2-charset.html
assets/fonts/charset/: index.html
cmake/: BuildDocs.cmake  FetchFont.cmake
docs/: COMMENTING_GUIDELINES.md  FONT_AUTO_FETCHING_VERIFICATION.md  Font_Auto_Fetching.md  Font_Integration.md  Graphics.plan.md  Graphics.plan2.md  Graphics_Implementation_Status.md  IMPLEMENTATION_SUMMARY.md  Implementation_Gap_Analysis.md  MERGE_STATUS.md  README.md  architecture.md  docs_overview.md  features.md
examples/: comprehensive_test.bas  graphics_demo.bas  graphics_simple.bas  strings.bas  test_no_graphics_mode.bas  test_suite.bas  textmode_demo.bas  times_table.bas  trig.bas
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  (+96 more)
src/: filesystem.cpp  filesystem.h  float40.cpp  float40.h  functions.cpp  functions.h  graphics.cpp  graphics.h  graphics_config.h  graphics_renderer.cpp  graphics_renderer.h  interactive.cpp  interactive.h  interpreter.cpp  interpreter.h  main.cpp  parser.cpp  parser.h  statements.cpp  statements.h  tape_manager.cpp  tape_manager.h  tokenizer.cpp  tokenizer.h  types.cpp  types.h  variables.cpp  variables.h  version.h.in
tests/: chain_helper.bas  test_40_column_rendering.bas  test_80_column_rendering.bas  test_append.bas  test_arrays.bas  test_bell.bas  test_bsave_bload.bas  test_call.bas  test_call_addresses.bas  test_chain.bas  test_chain_first.bas  test_chain_second.bas  test_clr.bas  test_comprehensive_hex_format.bas  test_cont.bas  test_create.bas  test_dash.bas  test_data_read.bas  test_def_fn.bas  test_def_fn_two_char.bas  test_del.bas  test_draw.bas  test_equals.bas  test_exec.bas  test_fibonacci.bas  test_file_io.bas  test_flush.bas  test_for.bas  test_fre_pdl.bas  test_gosub.bas  test_graphics_basic.bas  test_graphics_modes.bas  test_hello.bas  test_hex_output_format.bas  test_himem_lomem.bas  test_hplot.bas  test_int.bas  test_integer_vars.bas  test_left.bas  test_lock_unlock.bas  (+42 more)
