cmake_minimum_required(VERSION 3.20)

# Export compilation database for clangd/IDE tooling.
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(DEFAULT_VERSION "1.0.0")
set(MSBASIC_VERSION_STRING "${DEFAULT_VERSION}")

if(DEFINED VERSION_OVERRIDE)
    set(MSBASIC_VERSION_STRING "${VERSION_OVERRIDE}")
else()
    find_package(Git QUIET)
    if(GIT_FOUND)
        execute_process(
            COMMAND ${GIT_EXECUTABLE} describe --tags --dirty --always
            WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}
            RESULT_VARIABLE GIT_DESCRIBE_RESULT
            OUTPUT_VARIABLE GIT_DESCRIBE_OUTPUT
            OUTPUT_STRIP_TRAILING_WHITESPACE
        )
        if(GIT_DESCRIBE_RESULT EQUAL 0 AND NOT "${GIT_DESCRIBE_OUTPUT}" STREQUAL "")
            set(MSBASIC_VERSION_STRING "${GIT_DESCRIBE_OUTPUT}")
        endif()
    endif()
endif()

project(MSBasicClone LANGUAGES CXX)
message(STATUS "MSBasicClone version: ${MSBASIC_VERSION_STRING}")

# Generate a project-local .clangd at configure time if missing, using the
# compiler-detected implicit include directories. This keeps clangd in sync
# across platforms without hardcoding paths.
if(NOT EXISTS "${CMAKE_SOURCE_DIR}/.clangd")
    # Build the Add: list from implicit include directories.
    set(_clangd_add "")
    foreach(_dir IN LISTS CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES)
        if(NOT _dir STREQUAL "")
            string(APPEND _clangd_add "  - \"-isystem${_dir}\"\n")
        endif()
    endforeach()

    set(_clangd_content "# Auto-generated by CMake. Delete to regenerate.\n")
    string(APPEND _clangd_content "CompileFlags:\n")
    string(APPEND _clangd_content "  Add:\n")
    string(APPEND _clangd_content "${_clangd_add}")
    string(APPEND _clangd_content "\n  Remove:\n")
    string(APPEND _clangd_content "    - \"-Werror\"  # Let clangd show all warnings without failing\n")

    file(WRITE "${CMAKE_SOURCE_DIR}/.clangd" "${_clangd_content}")
    message(STATUS "Generated .clangd from implicit include directories")
endif()

# Include font fetching module
include(cmake/FetchFont.cmake)

# Set C++20 standard
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# Option to treat warnings as errors (must be defined before use)
option(WARNINGS_AS_ERRORS "Treat compiler warnings as errors" ON)

# Platform detection
if(WIN32)
    add_compile_definitions(PLATFORM_WINDOWS)
elseif(APPLE)
    add_compile_definitions(PLATFORM_MACOS)
elseif(UNIX)
    add_compile_definitions(PLATFORM_LINUX)
endif()

# Compiler-specific flags
if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    add_compile_options(
        -Wall
        -Wextra
        -pedantic
        -O3  # Performance optimization
    )
endif()

if(MSVC)
    # Don't apply /O2 globally (it can conflict with /RTC in vendored projects).
    # Keep the warning level globally but apply optimization flags only to the
    # `msbasic` target after it's created to avoid MSVC flag conflicts.
    add_compile_options(/W4)
endif()

# Source files
set(SOURCES
    src/main.cpp
    src/types.cpp
    src/tokenizer.cpp
    src/parser.cpp
    src/interpreter.cpp
    src/variables.cpp
    src/functions.cpp
    src/statements.cpp
    src/filesystem.cpp
    src/interactive.cpp
    src/float40.cpp
    src/graphics.cpp
    src/graphics_renderer.cpp
    src/tape_manager.cpp
)

# Header files
set(HEADERS
    src/tokenizer.h
    src/parser.h
    src/interpreter.h
    src/variables.h
    src/functions.h
    src/statements.h
    src/filesystem.h
    src/interactive.h
    src/float40.h
    src/types.h
    src/graphics.h
    src/graphics_config.h
    src/graphics_renderer.h
    src/tape_manager.h
)

file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/generated)
configure_file(
    ${CMAKE_CURRENT_SOURCE_DIR}/src/version.h.in
    ${CMAKE_CURRENT_BINARY_DIR}/generated/version.h
    @ONLY
)

set(CPACK_PACKAGE_VERSION "${MSBASIC_VERSION_STRING}")
include(CPack)

# Option to build raylib from source if not found
option(AUTO_BUILD_RAYLIB "Automatically build raylib from source if not found" ON)

# Optional: Find Raylib for graphics support
find_package(raylib QUIET)
if(raylib_FOUND)
    message(STATUS "Raylib found - graphics rendering enabled")
    add_compile_definitions(HAVE_RAYLIB)
    set(RAYLIB_AVAILABLE TRUE)
else()
    message(STATUS "Raylib not found via find_package")

    if(AUTO_BUILD_RAYLIB)
        message(STATUS "Attempting to build raylib from source...")

        # Check for X11 on Unix-like systems (required for raylib)
        if(UNIX AND NOT APPLE)
            find_package(X11)
            if(NOT X11_FOUND)
                message(WARNING "X11 development libraries not found. Raylib requires X11 on Linux.")
                message(WARNING "Install with: sudo apt-get install libx11-dev libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libgl1-mesa-dev")
                message(STATUS "Skipping raylib build - graphics will use off-screen buffer only")
                set(RAYLIB_AVAILABLE FALSE)
            endif()
        endif()

        if(NOT DEFINED RAYLIB_AVAILABLE OR RAYLIB_AVAILABLE)
            include(FetchContent)

            FetchContent_Declare(
                raylib
                GIT_REPOSITORY https://github.com/raysan5/raylib.git
                GIT_TAG 5.5
                GIT_SHALLOW TRUE
            )

            # Configure raylib build options
            set(BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
            set(BUILD_GAMES OFF CACHE BOOL "" FORCE)

                # Fix MSVC debug/release flag conflict on Windows
                if(MSVC)
                    set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>DLL" CACHE STRING "" FORCE)
                endif()

            # Attempt to build raylib
            FetchContent_MakeAvailable(raylib)

            if(TARGET raylib)
                message(STATUS "Successfully built raylib from source - graphics rendering enabled")
                add_compile_definitions(HAVE_RAYLIB)

                # Suppress warnings in vendored dependencies
                if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
                    target_compile_options(raylib PRIVATE -w)
                    if(TARGET glfw)
                        target_compile_options(glfw PRIVATE -w)
                    endif()
                elseif(MSVC)
                    target_compile_options(raylib PRIVATE /w)
                    if(TARGET glfw)
                        target_compile_options(glfw PRIVATE /w)
                    endif()
                endif()

                set(RAYLIB_AVAILABLE TRUE)
            else()
                message(STATUS "Failed to build raylib - graphics will use off-screen buffer only")
                set(RAYLIB_AVAILABLE FALSE)
            endif()
        endif()
    else()
        message(STATUS "AUTO_BUILD_RAYLIB is OFF - graphics will use off-screen buffer only")
        set(RAYLIB_AVAILABLE FALSE)
    endif()
endif()

# Fetch Apple II Font and charset map
fetch_apple2_font()

# Create executable
add_executable(msbasic ${SOURCES} ${HEADERS})
target_include_directories(msbasic PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/generated)

# Apply warnings-as-errors only to msbasic target (not vendored dependencies)
if(WARNINGS_AS_ERRORS)
    if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
        target_compile_options(msbasic PRIVATE -Werror)
    else()
        # Do not enable /WX by default for MSVC because third-party
        # headers (e.g., Windows SDK or vendored libraries) can emit
        # warnings that turn into errors and break CI. If you want to
        # enable warnings-as-errors on MSVC, set a specific option.
        message(STATUS "WARNINGS_AS_ERRORS is ON but /WX is disabled on this compiler to avoid CI failures")
    endif()
endif()

# Apply MSVC optimization flags only to the msbasic target to avoid
# conflicting with flags used by vendored projects (e.g., /RTC1).
# Only apply /O2 for non-Debug configurations (Release/RelWithDebInfo/MinSizeRel)
if(MSVC)
    target_compile_options(msbasic PRIVATE
        $<$<CONFIG:Release>:/O2>
        $<$<CONFIG:RelWithDebInfo>:/O2>
        $<$<CONFIG:MinSizeRel>:/O2>
    )
endif()

enable_testing()

file(GLOB BAS_TEST_FILES
    "${CMAKE_SOURCE_DIR}/tests/*.bas"
    "${CMAKE_SOURCE_DIR}/examples/*.bas"
)

# Use a dedicated working directory for tests to keep artifacts out of source tree
set(TEST_WORK_DIR "${CMAKE_BINARY_DIR}/test_work")
file(MAKE_DIRECTORY "${TEST_WORK_DIR}")

# Exclude interactive examples that require user input (e.g., GET/INPUT).
list(FILTER BAS_TEST_FILES EXCLUDE REGEX ".*textmode_demo\\.bas$")

foreach(BAS_FILE ${BAS_TEST_FILES})
    get_filename_component(BAS_NAME "${BAS_FILE}" NAME_WE)
    add_test(
        NAME bas_${BAS_NAME}
        COMMAND $<TARGET_FILE:msbasic> ${BAS_FILE}
        WORKING_DIRECTORY ${TEST_WORK_DIR}
    )
endforeach()

# Link math library on Unix-like systems
if(UNIX)
    target_link_libraries(msbasic m)
endif()

# Link Raylib if available
if(RAYLIB_AVAILABLE)
    target_link_libraries(msbasic raylib)
endif()

# Documentation target (requires Doxygen)
find_package(Doxygen QUIET)
if(DOXYGEN_FOUND)
    message(STATUS "Doxygen found - documentation target available")

    option(DOCS_CLEAN_OUTPUT "Remove docs/api before generating docs" ON)
    option(DOCS_ENABLE_DOT "Enable Graphviz/DOT diagrams in Doxygen" OFF)
    option(DOCS_BUILD_PDF "Build the Doxygen-generated PDF (requires TeX)" ON)
    set(DOCS_LATEX_ENGINE "xelatex" CACHE STRING "LaTeX engine for Doxygen PDF build (xelatex|lualatex|pdflatex)")
    set(DOCS_LOG_DIR "${CMAKE_BINARY_DIR}" CACHE PATH "Directory for docs build logs")

    add_custom_target(docs
        COMMAND ${CMAKE_COMMAND}
            -DSOURCE_DIR=${CMAKE_SOURCE_DIR}
            -DDOXYGEN_EXECUTABLE=${DOXYGEN_EXECUTABLE}
            -DDOCS_CLEAN_OUTPUT=${DOCS_CLEAN_OUTPUT}
            -DDOCS_ENABLE_DOT=${DOCS_ENABLE_DOT}
            -DDOCS_BUILD_PDF=${DOCS_BUILD_PDF}
            -DDOCS_LATEX_ENGINE=${DOCS_LATEX_ENGINE}
            -DDOCS_LOG_DIR=${DOCS_LOG_DIR}
            -P ${CMAKE_SOURCE_DIR}/cmake/BuildDocs.cmake
        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
            COMMENT "Generating API documentation (clean + Doxygen)"
        VERBATIM
    )
else()
    message(STATUS "Doxygen not found - documentation target unavailable")
    message(STATUS "Install Doxygen to build documentation: apt-get install doxygen (Ubuntu) or brew install doxygen (macOS)")
endif()

# Installation
install(TARGETS msbasic DESTINATION bin)
